clang/test/BSC/Negative/NullabilityCheck/nullable_nonnull_conflict/nullable_nonnull_conflict.cbs
// RUN: %clang_cc1 -verify %s

void test(int *owned _Nullable _Nonnull p) { // expected-error {{nullability specifier '_Nonnull' conflicts with existing specifier '_Nullable'}}
  int *owned  _Nullable _Nonnull q = p; // expected-error {{nullability specifier '_Nonnull' conflicts with existing specifier '_Nullable'}}
}
